--- a/MonG1WebApp/Views/Student/ShowAll.cshtml
+++ b/MonG1WebApp/Views/Student/ShowAll.cshtml
@@ -1,5 +1,7 @@
-﻿<!--List<Student>-->
+﻿@model List<Student>
 
+<!--List<Student>-->
+<!--Lossly Type View-->
 <table class="table table-bordered table-hover">
     <tr>
         <th>ID</th>
