--- a/MonG1WebApp/Views/_ViewImports.cshtml
+++ b/MonG1WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MonG1WebApp
 @using MonG1WebApp.Models
+@using MonG1WebApp.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
