--- a/MonG1WebApp/Views/Home/Privacy.cshtml
+++ b/MonG1WebApp/Views/Home/Privacy.cshtml
@@ -1,6 +1,22 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
+    Layout = "_MyLayout";
+    // Layout = null;
 }
+
+<!--REnderBody-->
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+@section HeadSection{
+    <!--any valid html statment-->
+    Hello FRom View To Head Section
+}
+@* 
+@section FootSection{
+    Hello From View To Footer Section
+} *@
+
+@* @section foot{
+    testB
+} *@
