--- a/MonG1WebApp/Views/Shared/_MyLayout.cshtml
+++ b/MonG1WebApp/Views/Shared/_MyLayout.cshtml
@@ -18,6 +18,6 @@
             @RenderSection("FootSection",false) <!--Define Optinal Section-->
         </div>
     </div>
-
+    @RenderSection("Scripts",false)
 </body>
 </html>
