--- a/MonG1WebApp/Views/Employee/New.cshtml
+++ b/MonG1WebApp/Views/Employee/New.cshtml
@@ -6,30 +6,48 @@
 
 <h1>New</h1>
 <form asp-action="SaveNew" asp-controller="Employee" method="post">
+    <div class="text-danger" asp-validation-summary="All"><!--Model Error + Custom Error-->
+
+    </div>
     @* <input type="hidden" name="_reqToken" value="unique string" /> *@
     <div>
         <label asp-for="Name"></label>
         <input class="form form-control" asp-for="Name"/>
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
      <div>
         <label asp-for="Email"></label>
         <input class="form form-control" asp-for="Email"/>
+        <span asp-validation-for="Email" class="text-danger"></span>
     </div>
      <div>
         <label asp-for="Salary"></label>
         <input class="form form-control" asp-for="Salary"/>
+        <span asp-validation-for="Salary" class="text-danger"></span>
+
     </div>
      <div>
         <label asp-for="ImageURL"></label>
         <input class="form form-control" asp-for="ImageURL"/>
+        <span asp-validation-for="ImageURL" class="text-danger"></span>
+
     </div>
      <div>
         <label asp-for="DepartmentID"></label>
         <select class="form form-control" asp-for="DepartmentID" asp-items="deptOptions">
             <option value="0">-- Select Department --</option>
         </select>
+        <span asp-validation-for="DepartmentID" class="text-danger"></span>
+
     </div>
 
     <input type="submit" value="Create" class="btn btn-success"/> 
 </form>
 <a asp-action="Index" asp-controller="Employee">Back To List</a>
+
+@section Scripts{
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
+
