--- a/MonG1WebApp/Views/Employee/Details.cshtml
+++ b/MonG1WebApp/Views/Employee/Details.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h1>Details</h1>
+<partial name="_EmpCardPartial"  model="Model"/>
 <h2 style="color:@ViewData["Clr"]"> Welcome  @Model.Name</h2>
 <h2 style="color:@ViewBag.Clr"> Welcome  @Model.Name</h2>
 
